--- a/01_Fancy_Buttons/sandbox.css
+++ b/01_Fancy_Buttons/sandbox.css
@@ -12,4 +12,22 @@
 
 .facebook-style-dark {
   box-shadow: inset 0 1px 0 0 #4d73bf;
+  background: #4267b2;
+  border: solid 1px #4267b2;
+  color: white;
+  text-shadow: 0 1px 0 #3359a5;
+}
+
+.facebook-style-dark:hover {
+  background: #2b54a7;
+}
+
+.facebook-style-dark:active {
+  background: #1d4698;
+  border-color: #1d4698;
+}
+
+.facebook-style-light {
+  background: #f6f7f9;
+  border: solid 1px #ced0d4;
 }
