--- a/01_Fancy_Buttons/sandbox.css
+++ b/01_Fancy_Buttons/sandbox.css
@@ -30,4 +30,82 @@
 .facebook-style-light {
   background: #f6f7f9;
   border: solid 1px #ced0d4;
+  color: #4b4f56;
 }
+
+.facebook-style-light:hover {
+  background: #e9ebee;
+}
+
+.facebook-style-light:active {
+  background: #d8dade;
+  border-color: #d8dade;
+}
+
+/* 3D BUTTOM */
+.btn-3d-1 {
+  position: relative;
+  background: orangered;
+  border: none;
+  color: white;
+  padding: 15px 24px;
+  font-size: 1.4rem;
+  box-shadow: -6px 6px 0 hsl(16, 100%, 30%);
+  outline: none;
+}
+
+.btn-3d-1:hover {
+  background: hsl(16, 100%, 45%);
+}
+
+.btn-3d-1:active {
+  background: hsl(16, 100%, 40%);
+  top: 3px;
+  left: -3px;
+  box-shadow: -3px 3px 0 hsl(16, 100%, 30%);
+}
+
+.btn-3d-1::before {
+  position: absolute;
+  display: block;
+  content: '';
+  height: 0;
+  width: 0;
+
+  border: solid 6px transparent;
+  border-right: solid 6px hsl(16, 100%, 30%);
+  border-left-width: 0px;
+  top: 0px;
+  left: -6px;
+}
+
+.btn-3d-1:active::before {
+  border: solid 3px transparent;
+  border-right: solid 3px hsl(16, 100%, 30%);
+  border-left-width: 0px;
+  top: 0px;
+  left: -3px;
+}
+
+.btn-3d-1::after {
+  position: absolute;
+  display: block;
+  content: '';
+  height: 0;
+  width: 0;
+
+  border: solid 6px transparent;
+  border-top: solid 6px hsl(16, 100%, 30%);
+  border-bottom-width: 0px;
+  bottom: -6px;
+  right: 0px;
+}
+
+.btn-3d-1:active::after {
+  border: solid 3px transparent;
+  border-top: solid 3px hsl(16, 100%, 30%);
+  border-bottom-width: 0px;
+  bottom: -3px;
+  right: 0px;
+}
+
