--- a/flexbox/style.css
+++ b/flexbox/style.css
@@ -1,21 +1,1 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.flex-container {
-  display: flex;
-}
-
-.item  {
-  width: 100px;
-  height: 100px;
-  background-color: #254de4;
-  color: white;
-  margin: 10px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
