--- a/css_grid/style.css
+++ b/css_grid/style.css
@@ -1,55 +1,123 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@200;300;400;700&display=swap');
+
 * {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  height: 100vh;
-
-  display: grid;
-  grid-template-areas:
-    'header header header'
-    'nav main aside'
-    'nav footer footer';
-  grid-template-columns: 1fr 4fr 1fr;
-  grid-template-rows: 80px 1fr 70px;
+  background-color: #edf2f8;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  line-height: 1.7;
+  font-size: 13px;
 }
 
-header,
-footer,
-main,
-aside,
-nav {
-  background-color: steelblue;
-  color: white;
+.testimonials {
+  max-width: 1440px;
+  margin: 100px auto;
   padding: 20px;
-  border: skyblue 1px solid;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
 }
 
-header {
-  grid-area: header;
+.card {
+  background-color: white;
+  border-radius: 10px;
+  padding: 30px;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  margin-bottom: 10px;
 }
 
-nav {
-  grid-area: nav;
+.card--bg-purple {
+  background-color: hsl(263, 55%, 52%);
+  color: white;
+  background-image: url(./images/bg-pattern-quotation.svg);
+  background-repeat: no-repeat;
+  background-position: top 10px right 100px;
 }
 
-main {
-  grid-area: main;
+.card--bg-black-blue {
+  background-color: hsl(217, 19%, 35%);
+  color: white;
 }
 
-aside {
-  grid-area: aside;
+.card--bg-gray-blue {
+  background-color: hsl(219, 29%, 14%);
+  color: white;
+}
+
+.card__header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.card__header h3 {
+  font-size: 15px;
+}
+
+.card__header p {
+  opacity: 50%;
+}
+
+.card__img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 2px solid #996ed9;
+  margin-right: 10px;
+}
+
+.card__lead {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1.3;
+  margin-bottom: 20px;
+}
+
+.card_qoute {
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 1.4;
+  opacity: 70%;
+}
+
+.card:nth-of-type(1) {
+  grid-column: 1 / 3;
+}
+
+.card:nth-of-type(4) {
+  grid-column: 2 / 4;
+  grid-row: 2;
+}
+
+.card:nth-of-type(5) {
+  grid-column: 4;
+  grid-row: 1 / 3;
 }
 
 footer {
-  grid-area: footer;
+  text-align: center;
 }
 
-
-
-
-
+@media(max-width: 768px) {
+  .testimonials {
+    grid-template-columns: 1fr;
+    width: 100%;
+  }
+  .card:nth-of-type(1) {
+    grid-column: 1;
+  }
+  
+  .card:nth-of-type(4) {
+    grid-column: 1;
+    grid-row: 4 / 5;
+  }
+  
+  .card:nth-of-type(5) {
+    grid-column: 1;
+    grid-row: 5 / 6;
+  }
+}
