--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@
   padding: 0;
 }
 
-.nav {
+nav {
   background-color: hsl(15, 72%, 55%);;
   color: white;
   height: 60px;
 }
 
-.nav .container {
+nav {
   display: flex;
   max-width: 1100px;
   margin: 0 auto;
@@ -18,27 +18,37 @@
   align-items: center;
 }
 
-.nav .logo {
+nav p {
   font-size: 1.7rem;
+  margin: 1rem auto 1rem 2rem;
 }
 
-.main .container {
-  display: flex;
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+  margin: 2rem 4rem;
   max-width: 1100px;
-  margin: 0 auto;
 }
 
-.main .box {
-  margin-top: 10px;
-  font-size: 1.2rem;
-
+main .box {
+  /* font-size: 1.2rem; */
   background-color: hsl(15, 72%, 55%);
   color: white;
   padding: 10px 20px;
+  border-radius: 1rem;
+
+  display: grid;
+  grid-template-columns: 1;
+  align-items: center;
 }
 
-.main .box:hover {
+main .box:hover {
   cursor: pointer;
   background-color: hsl(15, 72%, 45%);
+}
+
+main > .box > p {
+  text-align: center;
 }
 
